--- a/Sass/Main.scss
+++ b/Sass/Main.scss
@@ -1,11 +1,11 @@
 @import "./utilities/variables";
-@import "./layout/header";
+@import "/Sass/layout/header";
 @import "./utilities/fonts";
 @import "./layout/homelayout";
-@import "./layout/aboutme";
-@import "./layout/contactpage";
-@import "./layout/projectspage";
-@import "./layout/musicpage";
+@import "/Sass/layout/aboutme";
+@import "/Sass/layout/contactpage";
+@import "/Sass/layout/projectspage";
+@import "/Sass/layout/musicpage";
 
 
 html,
