--- a/Sass/Main.scss
+++ b/Sass/Main.scss
@@ -1,7 +1,6 @@
-@import "./utilities/variables";
+@import "utilities/variables";
 @import "/Sass/layout/header";
-@import "./utilities/fonts";
-@import "./layout/homelayout";
+@import "utilities/fonts";
 @import "/Sass/layout/aboutme";
 @import "/Sass/layout/contactpage";
 @import "/Sass/layout/projectspage";
