--- a/Sass/main.css
+++ b/Sass/main.css
@@ -158,10 +158,12 @@
   height: 45px;
   width: 90vw;
   -ms-grid-column: 1;
+  grid-column: 1;
       grid-column-start: 1;
   grid-column-end: 3;
   background-color: #00a2ff;
   -ms-grid-row: 1;
+  grid-row: 1;
       grid-row-start: 1;
   grid-row-end: 1;
   text-decoration: underline;
@@ -171,9 +173,11 @@
 /*#region The Unseeing Eye*/
 .GameOne {
   -ms-grid-row: 2;
+  grid-row: 2;
       grid-row-start: 2;
   grid-row-end: 2;
   -ms-grid-column: 1;
+  grid-column: 1;
       grid-column-start: 1;
   background-color: black;
   margin-bottom: 30px;
@@ -261,9 +265,11 @@
 /*#region TD*/
 .GameTwo {
   -ms-grid-row: 2;
+  grid-row: 2;
       grid-row-start: 2;
   grid-row-end: 2;
   -ms-grid-column: 2;
+  grid-column: 2;
       grid-column-start: 2;
   margin-bottom: 30px;
 }
@@ -347,9 +353,11 @@
 /*#region IRT*/
 .GameThree {
   -ms-grid-row: 2;
+  grid-row: 2;
       grid-row-start: 2;
   grid-row-end: 2;
   -ms-grid-column: 3;
+  grid-column: 3;
       grid-column-start: 3;
   margin-bottom: 30px;
 }
@@ -454,10 +462,12 @@
   height: 45px;
   width: 90vw;
   -ms-grid-column: 1;
+  grid-column: 1;
       grid-column-start: 1;
   grid-column-end: 3;
   background-color: #00a2ff;
   -ms-grid-row: 1;
+  grid-row: 1;
       grid-row-start: 1;
   grid-row-end: 1;
   text-decoration: underline;
@@ -471,10 +481,12 @@
   height: 45px;
   width: 90vw;
   -ms-grid-column: 1;
+  grid-column: 1;
       grid-column-start: 1;
   grid-column-end: 3;
   background-color: #00a2ff;
   -ms-grid-row: 2;
+  grid-row: 2;
       grid-row-start: 2;
   grid-row-end: 2;
   margin-top: 3px;
@@ -482,6 +494,7 @@
 
 .GameTrackOne {
   -ms-grid-row: 3;
+  grid-row: 3;
       grid-row-start: 3;
 }
 
@@ -492,8 +505,10 @@
 
 .GameTrackTwo {
   -ms-grid-row: 3;
+  grid-row: 3;
       grid-row-start: 3;
   -ms-grid-column: 2;
+  grid-column: 2;
       grid-column-start: 2;
 }
 
@@ -504,8 +519,10 @@
 
 .GameTrackThree {
   -ms-grid-row: 3;
+  grid-row: 3;
       grid-row-start: 3;
   -ms-grid-column: 3;
+  grid-column: 3;
       grid-column-start: 3;
 }
 
@@ -521,18 +538,22 @@
   height: 45px;
   width: 90vw;
   -ms-grid-column: 1;
+  grid-column: 1;
       grid-column-start: 1;
   grid-column-end: 3;
   background-color: #00a2ff;
   -ms-grid-row: 4;
+  grid-row: 4;
       grid-row-start: 4;
   grid-row-end: 4;
 }
 
 .TrackOne {
   -ms-grid-row: 5;
+  grid-row: 5;
       grid-row-start: 5;
   -ms-grid-column: 1;
+  grid-column: 1;
       grid-column-start: 1;
 }
 
@@ -543,8 +564,10 @@
 
 .TrackTwo {
   -ms-grid-row: 5;
+  grid-row: 5;
       grid-row-start: 5;
   -ms-grid-column: 2;
+  grid-column: 2;
       grid-column-start: 2;
 }
 
@@ -555,8 +578,10 @@
 
 .TrackThree {
   -ms-grid-row: 5;
+  grid-row: 5;
       grid-row-start: 5;
   -ms-grid-column: 3;
+  grid-column: 3;
       grid-column-start: 3;
 }
 
