decreased music box size

--- a/Sass/Main.scss
+++ b/Sass/Main.scss
@@ -1,10 +1,10 @@
 @import "utilities/variables";
-@import "/Sass/layout/header";
+@import "layout/header";
 @import "utilities/fonts";
-@import "/Sass/layout/aboutme";
-@import "/Sass/layout/contactpage";
-@import "/Sass/layout/projectspage";
-@import "/Sass/layout/musicpage";
+@import "layout/aboutme";
+@import "layout/contactpage";
+@import "layout/projectspage";
+@import "layout/musicpage";
 
 
 html,
