--- a/Sass/main.css
+++ b/Sass/main.css
@@ -61,39 +61,56 @@
 }
 
 .aboutmecontainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-flow: wrap;
-      flex-flow: wrap;
+  display: -ms-grid;
+  display: grid;
   margin-top: 15vh;
-  margin-left: 30vw;
-  position: absolute;
-  width: 40%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin-left: 20%;
+  width: 60vw;
+  height: 70vh;
+  -ms-grid-columns: 40% 60%;
+      grid-template-columns: 40% 60%;
+  -ms-grid-rows: 30vh 30vh 30vh;
+      grid-template-rows: 30vh 30vh 30vh;
+}
+
+.Selfie {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 1;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  grid-row-end: 3;
+  width: 100%;
+  height: auto;
 }
 
 .aboutmetitle {
-  position: relative;
   color: #00a2ff;
   font-family: "Cinzel", serif;
   font-weight: bolder;
   font-size: xx-large;
   width: 100%;
   text-align: center;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 4;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
 }
 
 .aboutmetext {
   color: white;
   text-align: left;
-  margin-top: 5vw;
   font-size: large;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  grid-column-end: 4;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  grid-row-end: 3;
+  width: 60%;
+  margin: auto;
+  margin-top: 5vh;
 }
 
 .aboutmetext a {
@@ -567,7 +584,6 @@
 
 html,
 body {
-  height: 100%;
   padding: 0px;
   margin: 0px;
   background-color: #272525;
