added CV to contact page

--- a/Sass/layout/_contactpage.scss
+++ b/Sass/layout/_contactpage.scss
@@ -26,3 +26,9 @@ width: 100%;
     margin-top: 100px;
     padding-left: 48vw;
 }
+
+.CV{
+    margin-left: 30vw;
+    width: 40vw;
+    height: 100vh;
+}
