--- a/Sass/main.css
+++ b/Sass/main.css
@@ -151,6 +151,12 @@
   padding-left: 48vw;
 }
 
+.CV {
+  margin-left: 30vw;
+  width: 40vw;
+  height: 100vh;
+}
+
 .GamesContainer {
   width: 90vw;
   height: 80vh;
