--- a/Sass/main.css
+++ b/Sass/main.css
@@ -588,6 +588,110 @@
   height: 100%;
 }
 
+.PageContainer {
+  display: -ms-grid;
+  display: grid;
+  gap: 2%;
+  margin-top: 15vh;
+  margin-left: 20vw;
+  position: absolute;
+  width: 60vw;
+  height: 70vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: 47.5% 47.5%;
+      grid-template-columns: 47.5% 47.5%;
+  -ms-grid-rows: 47.5% 47.5%;
+      grid-template-rows: 47.5% 47.5%;
+}
+
+.AMC {
+  width: 100%;
+  height: 100%;
+  background-color: #616e75;
+}
+
+.AMC p {
+  margin-left: 19%;
+  margin-top: 13%;
+  position: absolute;
+  color: white;
+  font-size: x-large;
+}
+
+.PJC {
+  width: 100%;
+  height: 100%;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+}
+
+.PJC p {
+  margin-left: 19%;
+  margin-top: 12%;
+  position: absolute;
+  color: white;
+  font-size: x-large;
+}
+
+.MC {
+  width: 100%;
+  height: 100%;
+  -ms-grid-row: 1;
+      grid-row-start: 1;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+}
+
+.MC p {
+  margin-left: 19%;
+  margin-top: 13%;
+  position: absolute;
+  color: white;
+  font-size: x-large;
+}
+
+.CCVC {
+  width: 100%;
+  height: 100%;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  -ms-grid-column: 2;
+      grid-column-start: 2;
+  background-color: black;
+}
+
+.CCVC p {
+  margin-left: 19%;
+  margin-top: 13%;
+  position: absolute;
+  color: white;
+  font-size: x-large;
+}
+
+.MusicImg {
+  width: 100%;
+  height: 100%;
+}
+
+.ProjectImg {
+  width: 100%;
+  height: 100%;
+}
+
+.ABMImg {
+  width: 100%;
+  height: 100%;
+}
+
+.CCVCImage {
+  width: 100%;
+  height: 100%;
+}
+
 html,
 body {
   padding: 0px;
