--- a/Sass/layout/_projectspage.scss
+++ b/Sass/layout/_projectspage.scss
@@ -7,7 +7,7 @@
     margin-top: 10vh;
     margin-left: 4vw;
     background-color: $CustomGrey;
-    grid-template-rows: 2.2vh 38vh;
+    grid-template-rows: 2.2vh 38vh 38vh;
     grid-template-columns: 29.83vw 29.83vw 29.83vw;
 }
 
@@ -249,6 +249,168 @@ color: black;
 }
 
 .G3Popup{
+    text-align: center;
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 38vw;
+    position: relative;
+    transition: all 5s ease-in-out;
+    .CloseButton{
+     text-decoration: none;
+     color: red;
+     font-size: xx-large;
+     font-weight: bold;
+    }
+
+    h2{
+        font-size: xx-large;
+    }
+}
+/*#endregion*/
+
+/*#region QOTH*/
+
+.GameFour{
+    grid-row-start: 3;
+    // grid-row-end: 3;
+    grid-column-start:1;
+    // background-color: yellow;
+    margin-bottom: 30px;
+    margin-top: -5%;
+    &:hover .QOTHOverlay{
+        opacity: 1;
+    }
+}
+
+.QOTH{
+    height: auto;
+    width: 100%;
+    text-decoration: none;
+    color: black;
+}
+
+.QOTHImg{
+    height: auto;
+    width: 100%;
+    margin-top: -1.75vh;
+}
+
+.QOTHOverlay{
+  position: absolute; 
+  background: rgb(0, 0, 0);
+  background:rgba(255, 255, 255, 0.607) ;
+  color: #f1f1f199; 
+  width: 27.75vw;
+  transition: .6s ease;
+  opacity:0;
+  color: black;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  margin-top: -11.5vh;
+  max-height: 5.1vh;
+}
+
+.P4Overlay{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: $PopupBackground;
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    &:target {
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
+.G4Popup{
+    text-align: center;
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 38vw;
+    position: relative;
+    transition: all 5s ease-in-out;
+    .CloseButton{
+     text-decoration: none;
+     color: red;
+     font-size: xx-large;
+     font-weight: bold;
+    }
+
+    h2{
+        font-size: xx-large;
+    }
+}
+/*#endregion*/
+
+/*#region TLS*/
+
+.GameFive{
+    grid-row-start: 3;
+    // grid-row-end: 3;
+    grid-column-start:2;
+    // background-color: yellow;
+    margin-bottom: 35px;
+    margin-top: -5%;
+    &:hover .TLSOverlay{
+        opacity: 1;
+    }
+}
+
+.TLS{
+    height: auto;
+    width: 100%;
+    text-decoration: none;
+    color: black;
+}
+
+.TLSImg{
+    height: auto;
+    width: 100%;
+    margin-top: -1.75vh;
+}
+
+.TLSOverlay{
+  position: absolute; 
+  background: rgb(0, 0, 0);
+  background:rgba(255, 255, 255, 0.607) ;
+  color: #f1f1f199; 
+  width: 27.75vw;
+  transition: .6s ease;
+  opacity:0;
+  color: black;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  margin-top: -11.5vh;
+  max-height: 5.1vh;
+}
+
+.P5Overlay{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: $PopupBackground;
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    &:target {
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
+.G5Popup{
     text-align: center;
     margin: 70px auto;
     padding: 20px;
