--- a/Sass/layout/_projectspage.scss
+++ b/Sass/layout/_projectspage.scss
@@ -432,3 +432,83 @@ color: black;
 }
 /*#endregion*/
 
+/*#region TLS*/
+
+.GameSix{
+    grid-row-start: 3;
+    // grid-row-end: 3;
+    grid-column-start:3;
+    // background-color: yellow;
+    margin-bottom: 35px;
+    margin-top: -5%;
+    &:hover .TTDOverlay{
+        opacity: 1;
+    }
+}
+
+.TTD{
+    height: auto;
+    width: 100%;
+    text-decoration: none;
+    color: black;
+}
+
+.TTDImg{
+    height: auto;
+    width: 100%;
+    margin-top: -1.75vh;
+}
+
+.TTDOverlay{
+  position: absolute; 
+  background: rgb(0, 0, 0);
+  background:rgba(255, 255, 255, 0.607) ;
+  color: #f1f1f199; 
+  width: 27.75vw;
+  transition: .6s ease;
+  opacity:0;
+  color: black;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  margin-top: -11.5vh;
+  max-height: 5.1vh;
+}
+
+.P6Overlay{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: $PopupBackground;
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    &:target {
+        visibility: visible;
+        opacity: 1;
+    }
+}
+
+.G6Popup{
+    text-align: center;
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 38vw;
+    position: relative;
+    transition: all 5s ease-in-out;
+    .CloseButton{
+     text-decoration: none;
+     color: red;
+     font-size: xx-large;
+     font-weight: bold;
+    }
+
+    h2{
+        font-size: xx-large;
+    }
+}
+/*#endregion*/
