--- a/Sass/main.css
+++ b/Sass/main.css
@@ -625,6 +625,92 @@
 }
 
 /*#endregion*/
+/*#region TLS*/
+.GameSix {
+  -ms-grid-row: 3;
+      grid-row-start: 3;
+  -ms-grid-column: 3;
+      grid-column-start: 3;
+  margin-bottom: 35px;
+  margin-top: -5%;
+}
+
+.GameSix:hover .TTDOverlay {
+  opacity: 1;
+}
+
+.TTD {
+  height: auto;
+  width: 100%;
+  text-decoration: none;
+  color: black;
+}
+
+.TTDImg {
+  height: auto;
+  width: 100%;
+  margin-top: -1.75vh;
+}
+
+.TTDOverlay {
+  position: absolute;
+  background: black;
+  background: rgba(255, 255, 255, 0.607);
+  color: #f1f1f199;
+  width: 27.75vw;
+  -webkit-transition: .6s ease;
+  transition: .6s ease;
+  opacity: 0;
+  color: black;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  margin-top: -11.5vh;
+  max-height: 5.1vh;
+}
+
+.P6Overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(109, 98, 98, 0.485);
+  -webkit-transition: opacity 500ms;
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.P6Overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.G6Popup {
+  text-align: center;
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 38vw;
+  position: relative;
+  -webkit-transition: all 5s ease-in-out;
+  transition: all 5s ease-in-out;
+}
+
+.G6Popup .CloseButton {
+  text-decoration: none;
+  color: red;
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+.G6Popup h2 {
+  font-size: xx-large;
+}
+
+/*#endregion*/
 .MusicContainer {
   width: 90vw;
   height: 95vh;
