--- a/Sass/layout/_homelayout.scss
+++ b/Sass/layout/_homelayout.scss
@@ -1,5 +1,4 @@
-.PageContainer{
-    // background-color: yellow;    
+.PageContainer {
     display: grid;
     gap: 2%;
     margin-top: 15vh;
@@ -8,88 +7,95 @@
     width: 60vw;
     height: 70vh;
     align-items: center;
-    grid-template-columns: 47.5% 47.5%;
-    grid-template-rows: 47.5% 47.5%;
+    grid-template-columns: repeat(2, 47.5%);
+    grid-template-rows: repeat(2, 47.5%);
 }
 
-.AMC{
+.AMC {
     width: 100%;
     height: 100%;
     background-color: $CustomGrey;
-    p{
-        margin-left: 19%;
-        margin-top: 13%;
-            position: absolute;
-            color: white;
-            font-size: x-large;
-        }
-}
+    position: relative;
 
-.PJC{
-    width: 100%;
-    height: 100%;
-    grid-row-start:2 ;
-    grid-column-start: 1;
-    p{
-        margin-left: 19%;
-        margin-top: 12%;
-            position: absolute;
-            color: white;
-            font-size: x-large;
-        }
-}
-
-.MC{
-    width: 100%;
-    height: 100%;
-    grid-row-start:1 ;
-    grid-column-start: 2;
-    p{
-    margin-left: 19%;
-    margin-top: 13%;
+    span {
         position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
         color: white;
         font-size: x-large;
     }
 }
 
-.CCVC{
+.PJC {
     width: 100%;
     height: 100%;
-    grid-row-start:2 ;
-    grid-column-start: 2;
+    // grid-row-start: 2;
+    // grid-column-start: 1;
+    position: relative;
+
+    span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: white;
+        font-size: x-large;
+    }
+}
+
+.MC {
+    width: 100%;
+    height: 100%;
+    // grid-row-start: 1;
+    // grid-column-start: 2;
+    position: relative;
+
+    span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: white;
+        font-size: x-large;
+    }
+}
+
+.CCVC {
+    width: 100%;
+    height: 100%;
+    // grid-row-start: 2;
+    // grid-column-start: 2;
     background-color: black;
-    p{
-        margin-left: 19%;
-        margin-top: 13%;
-            position: absolute;
-            color: white;
-            font-size: x-large;
-        }
+    position: relative;
+
+    span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: white;
+        font-size: x-large;
+    }
 }
 
-.MusicImg{
-width: 100%;
-height: 100%;
-// opacity: 50%;
-}
-
-.ProjectImg{
-width: 100%;
-height: 100%;
-// opacity: 50%;
-}
-
-.ABMImg{
-width: 100%;
-height: 100%;
-}
-
-.CCVCImage{
+.MusicImg,
+.ProjectImg,
+.ABMImg,
+.CCVCImage {
     width: 100%;
     height: 100%;
 }
 
+@media screen and (max-width: 1200px) {
+    .PageContainer {
+        margin-left: 35vw;
+        grid-template-columns: 47.5%;
+        grid-template-rows: repeat(4, auto);
+    }
 
-
-
+}
