--- a/Sass/layout/_projectspage.scss
+++ b/Sass/layout/_projectspage.scss
@@ -121,7 +121,7 @@
     transition: opacity 500ms;
     visibility: hidden;
     opacity: 0;
-
+    z-index: 1;
     &:target {
         visibility: visible;
         opacity: 1;
